--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase": "^7.5.0",
     "moment": "^2.24.0",
     "native-run": "^0.3.0",
+    "ngx-matomo": "^0.1.4",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -61,6 +62,7 @@
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
+    "firebase-tools": "^6.12.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
